<resources>
    <string name="app_name">HeatFlow</string>

    <!-- General strings -->
    <string name="ok">OK</string>
    <string name="ko">KO</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="action_default">Default</string>
    <string name="progress">%d%%</string>

    <!-- menus -->
    <string name="menu_scan_again">Change Device</string>

    <!-- Scanner Activity -->
    <string name="ble_not_supported">BLE is not supported on this device.</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not available.</string>
    <string name="error_scanning">Unable to start scanning.</string>

    <string name="menu_start_scan">Start scanning</string>
    <string name="menu_stop_scan">Stop scanning</string>

    <string name="device_name">Device Name</string>
    <string name="device_addr">Device Address</string>

    <!-- BLE Connection State -->
    <string name="ble_conn_ready">Ready !</string>
    <string name="ble_conn_connecting">Connecting ...</string>
    <string name="ble_conn_initializing">Service discovery ...</string>
    <string name="ble_conn_disconnected">Disconnected !</string>

    <!-- Main Activity -->
    <string name="connection_progress">Connection in progress&#8230;\n\n%1$s</string>
    <string name="device_not_connected">BLE device disconnected.</string>
    <string name="device_connected">BLE device connected.</string>
    <string name="connection_state">Connection\'s state</string>
    <string name="watch_busy">BLE device is busy ...</string>
    <string name="model_number">Model N.</string>
    <string name="serial_number">Serial N.</string>
    <string name="hardware_revision">Hardware Rev.</string>
    <string name="firmware_revision">Firmware Rev.</string>

    <string name="btn_measure_start">Start Measuring</string>
    <string name="btn_measure_stop">Stop Measuring</string>
    <string name="ads_1_result">Temperature</string>
    <string name="ads_2_result">Heat Flow</string>
    <string name="coeff_a">Coefficient a</string>
    <string name="coeff_b">Coefficient b</string>
    <string name="diff_0_1">diff_0-1</string>
    <string name="diff_2_3">diff_2-3</string>

    <string name="battery_level">Battery Level</string>

    <string name="default_mv">... [mv]</string>
    <string name="default_c">... [C]</string>
    <string name="hf_default">...</string>
    <string name="ads_raw">ADS raw : </string>
    <string name="default_raw_value">...</string>
    <string name="hf_formula">Q = </string>

    <string name="error_connect_device">Unable to connected to the \"%1$s\" Bluetooth device.</string>

    <!-- builder activity -->
    <string name="builder_title">This app needs location access</string>
    <string name="builder_message">Please grant location access so this app can detect BLE devices.</string>
    <string name="builder_limited_title">Functionality limited</string>
    <string name="builder_limited_message">Since location access has not been granted, this app will not be able to discover BLE devices when in the background.</string>


</resources>
